# render-image

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.lambda  README.md  main.py  openapi.yaml  pyproject.toml
.github/: release.yml
.github/workflows/: create-release.yml  deploy-aws.yml  publish-docker-image.yml
infrastructure/: .gitignore  CLAUDE.md  README.md  app.py  cdk.json  pyproject.toml  render_image_stack.py  requirements.txt
infrastructure/iam/: github-actions-deploy-policy.json  github-actions-trust-policy.json
render_image/: __init__.py  contracts.py  errors.py  service.py
render_image/adapters/: __init__.py  aws_lambda.py  cloudflare.py  container.py
