[project]
name = "render-image-infrastructure"
version = "0.1.0"
description = "AWS CDK infrastructure for render-image"
requires-python = ">=3.14"
dependencies = [
    "aws-cdk-lib>=2.200.0,<3",
    "constructs>=10.0.0,<11.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
    "ty>=0.0.26",
]

[tool.uv]
python-preference = "only-managed"

[tool.ruff]
extend-exclude = ["cdk.out"]

[tool.ty.src]
exclude = ["cdk.out/"]
